[gd_scene load_steps=9 format=3 uid="uid://eayrnwud62wn"]

[ext_resource type="Script" path="res://scripts/ui/title_screen.gd" id="1_bsimy"]
[ext_resource type="Resource" uid="uid://cfospeu84vy2o" path="res://cutscenes/opening_cutscene.tres" id="2_rcqyn"]
[ext_resource type="Texture2D" uid="uid://bk3mcifbo00ob" path="res://sprites/environment/clouds.png" id="3_5qla5"]
[ext_resource type="Theme" uid="uid://cou1oxt1vsf13" path="res://theming/hover_ui.tres" id="4_737vl"]
[ext_resource type="Script" path="res://scripts/environment/effects/scrolling_clouds.gd" id="4_tu6lm"]
[ext_resource type="Texture2D" uid="uid://chuswf7xagqfc" path="res://sprites/ui/final_logo.png" id="5_7jei2"]
[ext_resource type="AudioStream" uid="uid://c8mm5qn6gafc8" path="res://music/title_theme.mp3" id="6_pxqlc"]
[ext_resource type="Script" path="res://scripts/systems/volume_control.gd" id="8_fen6m"]

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_bsimy")
_opening_cutscene = ExtResource("2_rcqyn")

[node name="BackgroundEffect" type="Node2D" parent="."]

[node name="ScrollingClouds" type="Sprite2D" parent="BackgroundEffect"]
z_index = -2
texture_repeat = 2
position = Vector2(957.5, 540)
scale = Vector2(0.9595, 1.084)
texture = ExtResource("3_5qla5")
region_enabled = true
region_rect = Rect2(0, 0, 2000, 1000)
script = ExtResource("4_tu6lm")
drift_x = 12.0
drift_y_amp = 8.0
drift_y_freq = 0.001

[node name="UICanvas" type="CanvasLayer" parent="."]

[node name="StartButton" type="Button" parent="UICanvas"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = 157.0
offset_right = 74.5
offset_bottom = 241.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_737vl")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="LowerButtons" type="HBoxContainer" parent="UICanvas"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.0
offset_top = 275.0
offset_right = 237.0
offset_bottom = 343.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_737vl")

[node name="CreditsButton" type="Button" parent="UICanvas/LowerButtons"]
layout_mode = 2
theme = ExtResource("4_737vl")
text = "Credits
"

[node name="SettingButton" type="Button" parent="UICanvas/LowerButtons"]
layout_mode = 2
theme = ExtResource("4_737vl")
text = "Settings"

[node name="QuitButton" type="Button" parent="UICanvas/LowerButtons"]
layout_mode = 2
theme = ExtResource("4_737vl")
text = "Quit
"

[node name="TextureRect" type="TextureRect" parent="UICanvas"]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -236.0
offset_top = 220.0
offset_right = 253.0
offset_bottom = 671.0
grow_horizontal = 2
pivot_offset = Vector2(191, 182)
texture = ExtResource("5_7jei2")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_pxqlc")
autoplay = true
attenuation = 1e-05

[node name="VolumeControl" type="Node" parent="AudioStreamPlayer2D"]
script = ExtResource("8_fen6m")

[connection signal="pressed" from="UICanvas/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="UICanvas/LowerButtons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="UICanvas/LowerButtons/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="UICanvas/LowerButtons/QuitButton" to="." method="_on_quit_button_pressed"]
